# aoc2021

./: Cargo.toml  download_auth.toml
src/: day1.rs  day2.rs  lib.rs  main.rs
