[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
extend = "1.1.2"
structopt = "0.3.25"
config = "0.11.0"
reqwest = "0.11.7"
futures = "0.3.18"
tokio = { version = "1.14.0", features = ["full"] }
